--- a/op_robot_tests/tests_files/data/users.yaml
+++ b/op_robot_tests/tests_files/data/users.yaml
@@ -103,8 +103,8 @@ users:
     DZO_Owner_auction:
         broker:   DZOauctions
         homepage: "http://dz3.byustudio.in.ua"
-        login:    testprozorroyowner@gmail.com
-        password: 12345678
+        login:    ustudiotestin.g@gmail.com
+        password: ustudiotesting
         browser:  Chrome
         position: [0, 0]
         size:     [1366, 800]
